errors.txt
main.cpp: In function 'int main()':
main.cpp:8:20: error: expected ';' before 'return'
    8 |   cp::println(3.14)
      |                    ^
      |                    ;
    9 |   return 0;
      |   ~~~~~~            
